doc(music): represent features on resulting segments

--- a/docs/examples/music-segmentation.ipynb
+++ b/docs/examples/music-segmentation.ipynb
@@ -11,7 +11,7 @@
     "Music segmentation is an instance of change point detection and can be performed with `ruptures`.\n",
     "Roughly, it consists of finding the temporal boundaries of homogeneous segments, e.g. the intro, verse, chorus and outro in a song.\n",
     "\n",
-    "To that end, the music track is transformer into an informative\n",
+    "To that end, the music track is transformed into an informative\n",
     "\n",
     "In order to do so, we run `ruptures` segmentation algorithms on two different set of features : \n",
     "\n",
@@ -42,6 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
     "from itertools import chain, product\n",
     "\n",
     "import librosa\n",
@@ -136,77 +137,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We ask for 5 breaking points\n",
-    "n_bkps = 5\n",
-    "\n",
-    "algos = [rpt.BottomUp, rpt.Binseg]\n",
-    "models = [\"l2\", \"l1\", \"rbf\"]  # \"l1\", \"rbf\", \"linear\", \"normal\", \"ar\"\n",
-    "kernelCPD_algos = [rpt.KernelCPD]\n",
-    "kernelCPD_kernels = [\"linear\", \"rbf\", \"cosine\"]\n",
-    "\n",
-    "model_objs = [(algo(model=model), model) for (algo, model) in product(algos, models)]\n",
-    "for (algo, kernel) in product(kernelCPD_algos, kernelCPD_kernels):\n",
-    "    model_objs.append((algo(kernel=kernel), kernel))\n",
-    "\n",
-    "n_plots = len(models) * len(algos) + len(kernelCPD_kernels) * len(kernelCPD_algos) + 2\n",
-    "fig, axs = plt.subplots(nrows=n_plots, sharex=True, figsize=(8, 20), dpi=150)\n",
-    "\n",
-    "librosa.display.waveplot(y, sr=sampling_rate, ax=axs[0])\n",
-    "axs[0].set(title=\"nutcracker\")\n",
-    "axs[0].label_outer()\n",
-    "\n",
-    "for idx, (algo, cost) in zip(range(1, n_plots), model_objs):\n",
-    "    algo = algo.fit(chromagram.T)\n",
-    "    rpt_bkps = algo.predict(n_bkps=n_bkps)\n",
+    "def plot_util(\n",
+    "    rpt_bkps,\n",
+    "    feature,\n",
+    "    sampling_rate,\n",
+    "    hop_length,\n",
+    "    y_axis,\n",
+    "    vline_min,\n",
+    "    vline_max,\n",
+    "    ax,\n",
+    "    title,\n",
+    "):\n",
     "    # Make the break points \"compatible\" with librosa api\n",
     "    # it expects index 0 and not index of the last point\n",
-    "    rpt_bkps.pop(-1)\n",
-    "    rpt_bkps = [0] + rpt_bkps\n",
     "    # Translate index in the chromagram to time index in the original soundtrack\n",
-    "    rpt_bpks_times = librosa.frames_to_time(rpt_bkps, sr=sampling_rate)\n",
+    "    rpt_bpks_times = librosa.frames_to_time([0] + rpt_bkps[:-1], sr=sampling_rate)\n",
     "    # Plot\n",
     "    librosa.display.specshow(\n",
-    "        chromagram, y_axis=\"chroma\", x_axis=\"time\", ax=axs[idx], hop_length=hop_length\n",
+    "        feature,\n",
+    "        x_axis=\"time\",\n",
+    "        y_axis=y_axis,\n",
+    "        ax=ax,\n",
+    "        hop_length=hop_length,\n",
+    "        cmap=\"magma\",\n",
+    "        sr=sampling_rate,\n",
     "    )\n",
-    "    axs[idx].vlines(\n",
+    "    ax.vlines(\n",
     "        rpt_bpks_times,\n",
-    "        0,\n",
-    "        chromagram.shape[0],\n",
+    "        vline_min,\n",
+    "        vline_max,\n",
     "        color=\"linen\",\n",
     "        linestyle=\"--\",\n",
     "        linewidth=1.5,\n",
     "        alpha=0.9,\n",
     "    )\n",
-    "    axs[idx].set(title=f\"Algo : {type(algo).__name__}, Cost : {cost}\")\n",
-    "    axs[idx].label_outer()\n",
+    "    ax.set(title=title)\n",
+    "    ax.label_outer()\n",
     "\n",
-    "algo = rpt.BottomUp(model=\"l2\").fit(chromagram.T)\n",
-    "rpt_bkps = algo.predict(pen=50)\n",
-    "# Make the break points \"compatible\" with librosa api\n",
-    "# it expects index 0 and not index of the last point\n",
-    "rpt_bkps.pop(-1)\n",
-    "rpt_bkps = [0] + rpt_bkps\n",
-    "# Translate index in the chromagram to time index in the original soundtrack\n",
-    "rpt_bpks_times = librosa.frames_to_time(rpt_bkps, sr=sampling_rate)\n",
-    "# Plot\n",
-    "librosa.display.specshow(\n",
+    "\n",
+    "# Create figure\n",
+    "fig, axs = plt.subplots(nrows=3, sharex=True, figsize=(8, 6), dpi=150)\n",
+    "\n",
+    "# Display raw soundtrack\n",
+    "librosa.display.waveplot(y, sr=sampling_rate, ax=axs[0])\n",
+    "axs[0].set(title=\"nutcracker\")\n",
+    "axs[0].label_outer()\n",
+    "\n",
+    "# Display results when asking for 5 break points\n",
+    "n_bkps = 5\n",
+    "start_time = time.time()\n",
+    "algo = rpt.KernelCPD(kernel=\"linear\").fit(chromagram.T)\n",
+    "rpt_bkps = algo.predict(n_bkps=n_bkps)\n",
+    "end_time = time.time()\n",
+    "plot_util(\n",
+    "    rpt_bkps,\n",
     "    chromagram,\n",
-    "    y_axis=\"chroma\",\n",
-    "    x_axis=\"time\",\n",
-    "    ax=axs[n_plots - 1],\n",
-    "    hop_length=hop_length,\n",
-    ")\n",
-    "axs[n_plots - 1].vlines(\n",
-    "    rpt_bpks_times,\n",
+    "    sampling_rate,\n",
+    "    hop_length,\n",
+    "    \"chroma\",\n",
     "    0,\n",
     "    chromagram.shape[0],\n",
-    "    color=\"linen\",\n",
-    "    linestyle=\"--\",\n",
-    "    linewidth=1.5,\n",
-    "    alpha=0.9,\n",
+    "    axs[1],\n",
+    "    f\"Algo : {type(algo).__name__}, Cost : {algo.kernel_name}, n_bkps : {n_bkps}, execution time : {(end_time-start_time)*1000:.1f}ms\",\n",
     ")\n",
-    "axs[n_plots - 1].set(title=f\"Algo : {type(algo).__name__}, Cost : l2\")\n",
-    "axs[n_plots - 1].label_outer()"
+    "\n",
+    "# Display results when using the penalized search\n",
+    "# method (unknown number of returned breaking point)\n",
+    "penalty = 50.0\n",
+    "start_time = time.time()\n",
+    "algo = rpt.KernelCPD(kernel=\"linear\").fit(chromagram.T)\n",
+    "rpt_bkps = algo.predict(pen=penalty)\n",
+    "end_time = time.time()\n",
+    "plot_util(\n",
+    "    rpt_bkps,\n",
+    "    chromagram,\n",
+    "    sampling_rate,\n",
+    "    hop_length,\n",
+    "    \"chroma\",\n",
+    "    0,\n",
+    "    chromagram.shape[0],\n",
+    "    axs[2],\n",
+    "    f\"Algo : {type(algo).__name__}, Cost : {algo.kernel_name}, penalty : {penalty}, execution time : {(end_time-start_time)*1000:.1f}ms\",\n",
+    ")"
    ]
   },
   {
@@ -215,75 +227,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We ask for 5 breaking points\n",
-    "n_bkps = 5\n",
+    "# Create figure\n",
+    "fig, axs = plt.subplots(nrows=4, sharex=True, figsize=(8, 9), dpi=150)\n",
     "\n",
-    "algos = [rpt.BottomUp, rpt.Binseg]\n",
-    "models = [\"l2\", \"l1\", \"rbf\"]  # \"l1\", \"rbf\", \"linear\", \"normal\", \"ar\"\n",
-    "kernelCPD_algos = [rpt.KernelCPD]\n",
-    "kernelCPD_kernels = [\"linear\", \"rbf\", \"cosine\"]\n",
-    "\n",
-    "model_objs = [(algo(model=model), model) for (algo, model) in product(algos, models)]\n",
-    "for (algo, kernel) in product(kernelCPD_algos, kernelCPD_kernels):\n",
-    "    model_objs.append((algo(kernel=kernel), kernel))\n",
-    "\n",
-    "n_plots = len(models) * len(algos) + len(kernelCPD_kernels) * len(kernelCPD_algos) + 3\n",
-    "fig, axs = plt.subplots(nrows=n_plots, sharex=True, figsize=(8, 20), dpi=150)\n",
-    "\n",
+    "# Display raw soundtrack\n",
     "times = librosa.times_like(oenv, sr=sampling_rate, hop_length=hop_length)\n",
     "librosa.display.waveplot(y, sr=sampling_rate, ax=axs[0])\n",
     "axs[0].set(title=\"nutcracker\")\n",
     "axs[0].label_outer()\n",
+    "# Display onset strength\n",
     "axs[1].plot(times, oenv, label=\"Onset strength\")\n",
     "axs[1].label_outer()\n",
     "axs[1].legend(frameon=True)\n",
     "\n",
-    "for idx, (algo, cost) in zip(range(2, n_plots), model_objs):\n",
-    "    algo = algo.fit(tempogram.T)\n",
-    "    rpt_bkps = algo.predict(n_bkps=n_bkps)\n",
-    "    # Make the break points \"compatible\" with librosa api\n",
-    "    # it expects index 0 and not index of the last point\n",
-    "    rpt_bkps.pop(-1)\n",
-    "    rpt_bkps = [0] + rpt_bkps\n",
-    "    # Translate index in the chromagram to time index in the original soundtrack\n",
-    "    rpt_bpks_times = librosa.frames_to_time(rpt_bkps, sr=sampling_rate)\n",
-    "    # Plot\n",
-    "    librosa.display.specshow(\n",
-    "        tempogram,\n",
-    "        y_axis=\"tempo\",\n",
-    "        x_axis=\"time\",\n",
-    "        ax=axs[idx],\n",
-    "        hop_length=hop_length,\n",
-    "        sr=sampling_rate,\n",
-    "        cmap=\"magma\",\n",
-    "    )\n",
-    "    axs[idx].vlines(\n",
-    "        rpt_bpks_times, 16, 480, color=\"linen\", linestyle=\"--\", linewidth=1.5, alpha=0.9\n",
-    "    )\n",
-    "    axs[idx].set(title=f\"Algo : {type(algo).__name__}, Cost : {cost}\")\n",
-    "    axs[idx].label_outer()\n",
-    "\n",
-    "algo = rpt.BottomUp(model=\"l2\").fit(chromagram.T)\n",
-    "rpt_bkps = algo.predict(pen=50)\n",
-    "# Make the break points \"compatible\" with librosa api\n",
-    "# it expects index 0 and not index of the last point\n",
-    "# Translate index in the chromagram to time index in the original soundtrack\n",
-    "rpt_bpks_times = librosa.frames_to_time([0] + rpt_bkps[:-1], sr=sampling_rate)\n",
-    "# Plot\n",
-    "librosa.display.specshow(\n",
+    "# Display results when asking for 5 break points\n",
+    "n_bkps = 5\n",
+    "start_time = time.time()\n",
+    "algo = rpt.KernelCPD(kernel=\"rbf\").fit(tempogram.T)\n",
+    "rpt_bkps = algo.predict(n_bkps=n_bkps)\n",
+    "end_time = time.time()\n",
+    "plot_util(\n",
+    "    rpt_bkps,\n",
     "    tempogram,\n",
-    "    y_axis=\"tempo\",\n",
-    "    x_axis=\"time\",\n",
-    "    ax=axs[n_plots - 1],\n",
-    "    hop_length=hop_length,\n",
-    "    sr=sampling_rate,\n",
-    "    cmap=\"magma\",\n",
+    "    sampling_rate,\n",
+    "    hop_length,\n",
+    "    \"tempo\",\n",
+    "    16,\n",
+    "    480,\n",
+    "    axs[2],\n",
+    "    f\"Algo : {type(algo).__name__}, Cost : {algo.kernel_name}, n_bkps : {n_bkps}, execution time : {(end_time-start_time)*1000:.1f}ms\",\n",
     ")\n",
-    "axs[n_plots - 1].vlines(\n",
-    "    rpt_bpks_times, 16, 480, color=\"linen\", linestyle=\"--\", linewidth=1.5, alpha=0.9\n",
-    ")\n",
-    "axs[n_plots - 1].set(title=f\"Algo : {type(algo).__name__}, Cost : l2\")\n",
-    "axs[n_plots - 1].label_outer()"
+    "\n",
+    "# Display results when using the penalized search\n",
+    "# method (unknown number of returned breaking point)\n",
+    "penalty = 50.0\n",
+    "start_time = time.time()\n",
+    "algo = rpt.KernelCPD(kernel=\"rbf\").fit(tempogram.T)\n",
+    "rpt_bkps = algo.predict(pen=penalty)\n",
+    "end_time = time.time()\n",
+    "plot_util(\n",
+    "    rpt_bkps,\n",
+    "    tempogram,\n",
+    "    sampling_rate,\n",
+    "    hop_length,\n",
+    "    \"tempo\",\n",
+    "    16,\n",
+    "    480,\n",
+    "    axs[3],\n",
+    "    f\"Algo : {type(algo).__name__}, Cost : {algo.kernel_name}, penalty : {penalty}, execution time : {(end_time-start_time)*1000:.1f}ms\",\n",
+    ")"
    ]
   },
   {
@@ -292,7 +284,9 @@
    "source": [
     "## Study each segment independently\n",
     "\n",
-    "Each segment of the music can be characterized by a set of features."
+    "Each segment of the music can be characterized by a set of features. Here, for each resulting segment, we compute the mean of every features. \n",
+    "\n",
+    "We aim at representing how the chosen algorithm detects mean-shifts in the multi-dimensional input signal."
    ]
   },
   {
@@ -301,24 +295,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampling_rate, bkps_times / sampling_rate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "# Run `ruptures` algorithm\n",
+    "n_bkps = 3\n",
+    "algo = rpt.KernelCPD(kernel=\"linear\").fit(tempogram.T)\n",
+    "rpt_bkps = algo.predict(n_bkps=n_bkps)\n",
+    "rpt_bpks_times = librosa.frames_to_time([0] + rpt_bkps[:-1], sr=sampling_rate)\n",
     "\n",
-    "for (segment_number, segment) in enumerate(\n",
-    "    np.split(chromagram.T, rpt_bkps[:-1]), start=1\n",
-    "):\n",
-    "    ax.plot(segment.mean(axis=0), \"-*\", label=f\"Segment n°{segment_number}\")\n",
-    "_ = plt.legend()\n",
+    "# Compute the mean of every features for each segment\n",
+    "heat_map = np.zeros((n_bkps + 1, tempogram.shape[0]))\n",
+    "for (segment_number, segment) in enumerate(np.split(tempogram.T, rpt_bkps[:-1])):\n",
+    "    heat_map[segment_number, :] = segment.mean(axis=0)\n",
+    "# Stretch x-axis to capture segment time duration\n",
+    "heat_map = np.repeat(heat_map, np.diff([0] + rpt_bkps), axis=0)\n",
+    "# Plot features means on segments\n",
+    "fig, ax = plt.subplots(figsize=(8, 4), dpi=150)\n",
+    "plot_util(\n",
+    "    rpt_bkps,\n",
+    "    heat_map.T,\n",
+    "    sampling_rate,\n",
+    "    hop_length,\n",
+    "    \"tempo\",\n",
+    "    16,\n",
+    "    480,\n",
+    "    ax,\n",
+    "    \"Features means on each segment\",\n",
+    ")\n",
     "\n",
-    "\n",
+    "# Output audio for each segment\n",
     "bkps_times = (rpt_bpks_times * sampling_rate).astype(int)[1:]\n",
     "for (segment_number, segment) in enumerate(np.split(y, bkps_times), start=1):\n",
     "    print(f\"Segment n°{segment_number}\")\n",
@@ -328,9 +331,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ruptures",
    "language": "python",
-   "name": "python3"
+   "name": "ruptures"
   },
   "language_info": {
    "codemirror_mode": {
@@ -342,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.6.8-final"
   },
   "toc-autonumbering": false
  },
