docs: add binder block

--- a/docs/examples/music-segmentation.ipynb
+++ b/docs/examples/music-segmentation.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Music segmentation\n",
     "\n",
+    "<!-- {{ add_binder_block(page) }} -->\n",
+    "\n",
     "## Introduction\n",
     "\n",
     "Music segmentation is an instance of change point detection and can be performed with `ruptures`.\n",
