docs: change to the music segmentation
(not finished)

--- a/docs/examples/music-segmentation.ipynb
+++ b/docs/examples/music-segmentation.ipynb
@@ -10,21 +10,18 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "Music segmentation is an instance of change point detection and can be performed with `ruptures`.\n",
+    "Music segmentation can be seen as a change point detection task and therefore can be carried out with `ruptures`.\n",
     "Roughly, it consists of finding the temporal boundaries of homogeneous segments, e.g. the intro, verse, chorus and outro in a song.\n",
     "\n",
-    "To that end, the music track is transformer into an informative\n",
+    "The adopted approach is summarized as follows:\n",
     "\n",
-    "In order to do so, we run `ruptures` segmentation algorithms on two different set of features : \n",
+    "- the original sound is transformed into an informative (multivariate) representaion;\n",
+    "- mean shifts are detected in this new representation using a dynamic programming approach.\n",
     "\n",
-    "* a chromagram, that maps the input signal into an usually 12 features space representing the classical 12 pitch classes;\n",
-    "* a tempogram computed based on the onset strength envelope of the input signal, that captures the tempo spectrum.\n",
+    "In this example, we try two representations which are well-known in the sound and music processing community:\n",
     "\n",
-    "By doing so, we provide two various ways of segmenting a music soundtrack depending on two different representations of the information carried by the input signal, respectively:\n",
-    "\n",
-    "* an harmonic spectral representation,\n",
-    "* a rhythmic representation.\n",
-    "\n",
+    "- a chromagram, that maps the input signal into a 12 features space representing the classical 12 pitch classes;\n",
+    "- a tempogram computed based on the onset strength envelope of the input signal, that captures the tempo spectrum.\n",
     "\n",
     "To load and manipulate sound data, we use the [librosa package](https://librosa.org/doc/latest/index.html)."
    ]
@@ -51,7 +48,25 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import ruptures as rpt  # our package\n",
-    "from IPython.display import Audio"
+    "from IPython.display import Audio, display"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also define a few utility functions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fig_ax(figsize=(15, 5)):\n",
+    "    \"\"\"Return a (matplotlib) figure and ax objects with given size.\"\"\"\n",
+    "    return plt.subplots(figsize=figsize)"
    ]
   },
   {
@@ -62,7 +77,9 @@
     "\n",
     "A number of music files are available in [Librosa](https://librosa.org/doc/latest/index.html).\n",
     "See [here](https://librosa.org/doc/latest/recordings.html#description-of-examples) for a complete list.\n",
-    "In this example, we choose the *Dance of the Sugar Plum Fairy* from *The Nutcracker* by Tchaikovsky. "
+    "In this example, we choose the *Dance of the Sugar Plum Fairy* from *The Nutcracker* by Tchaikovsky.\n",
+    "\n",
+    "We can listen to the music as well as display the sound envelope."
    ]
   },
   {
@@ -72,15 +89,24 @@
    "outputs": [],
    "source": [
     "duration = 30  # in seconds\n",
-    "y, sampling_rate = librosa.load(librosa.ex(\"nutcracker\"), duration=duration)\n",
-    "Audio(data=y, rate=sampling_rate)"
+    "signal, sampling_rate = librosa.load(librosa.ex(\"nutcracker\"), duration=duration)\n",
+    "\n",
+    "# listen to the music\n",
+    "display(Audio(data=signal, rate=sampling_rate))\n",
+    "\n",
+    "# look at the envelope\n",
+    "fig, ax = fig_ax()\n",
+    "ax.plot(np.arange(signal.size) / sampling_rate, signal)\n",
+    "ax.set_xlim(0, signal.size / sampling_rate)\n",
+    "ax.set_xlabel(\"Time (s)\")\n",
+    "_ = ax.set(title=\"Sound envelope\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compute features\n",
+    "## Transform the signal\n",
     "\n",
     "### Chromagram"
    ]
@@ -92,13 +118,29 @@
    "outputs": [],
    "source": [
     "# Number of samples between successive chroma frames\n",
-    "hop_length = 512\n",
+    "hop_length = 128\n",
     "# Number of chroma bins to produce\n",
     "n_chroma = 12\n",
-    "# Compute de Chromagram using the usual 12 chromas\n",
-    "# chromagram of shape [n_chroma, np.ceil(duration*sampling_rate/hop_length)]\n",
+    "# Compute the chromagram\n",
     "chromagram = librosa.feature.chroma_cqt(\n",
-    "    y=y, sr=sampling_rate, hop_length=hop_length, n_chroma=n_chroma\n",
+    "    y=signal, sr=sampling_rate, hop_length=hop_length, n_chroma=n_chroma\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = fig_ax()\n",
+    "_ = librosa.display.specshow(\n",
+    "    chromagram,\n",
+    "    ax=ax,\n",
+    "    x_axis=\"s\",\n",
+    "    y_axis=\"chroma\",\n",
+    "    hop_length=hop_length,\n",
+    "    sr=sampling_rate,\n",
     ")"
    ]
   },
@@ -115,21 +157,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Length of the onset autocorrelation window (in frames)\n",
-    "win_length = 384\n",
     "# Compute the onset strength\n",
-    "oenv = librosa.onset.onset_strength(y=y, sr=sampling_rate, hop_length=hop_length)\n",
-    "# tempogram of shape [win_length, np.ceil(y.shape[0]/hop_length)]\n",
+    "hop_length = 256\n",
+    "oenv = librosa.onset.onset_strength(y=signal, sr=sampling_rate, hop_length=hop_length)\n",
     "tempogram = librosa.feature.tempogram(\n",
-    "    onset_envelope=oenv, sr=sampling_rate, hop_length=hop_length, win_length=win_length\n",
+    "    onset_envelope=oenv,\n",
+    "    sr=sampling_rate,\n",
+    "    hop_length=hop_length,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Compute and display segmentations"
    ]
   },
   {
@@ -138,28 +173,131 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We ask for 5 breaking points\n",
-    "n_bkps = 5\n",
+    "fig, ax = fig_ax()\n",
+    "_ = librosa.display.specshow(\n",
+    "    tempogram,\n",
+    "    ax=ax,\n",
+    "    hop_length=hop_length,\n",
+    "    sr=sampling_rate,\n",
+    "    x_axis=\"s\",\n",
+    "    y_axis=\"tempo\",\n",
+    "    cmap=\"magma\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Signal segmentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chromagram.T.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigma = np.sqrt(chromagram.T.var(axis=0).mean())\n",
+    "n_samples, n_dims = chromagram.T.shape\n",
+    "pen_bic = 2 * sigma * sigma * np.log(n_samples) * (n_dims + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algo = rpt.KernelCPD(kernel=\"linear\").fit(chromagram.T.astype(float))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algo = rpt.KernelCPD(kernel=\"linear\").fit(np.random.randn(1000, 12))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chromagram.astype(np.double).dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bkps = algo.predict(pen=pen_bic)\n",
+    "print(bkps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(\n",
+    "    range(1, 21), [algo.cost.sum_of_costs(algo.predict(k)) for k in range(1, 21)], \"*-\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = fig_ax()\n",
+    "_ = librosa.display.specshow(\n",
+    "    chromagram,\n",
+    "    ax=ax,\n",
+    "    x_axis=\"s\",\n",
+    "    y_axis=\"chroma\",\n",
+    "    hop_length=hop_length,\n",
+    "    sr=sampling_rate,\n",
+    ")\n",
     "\n",
-    "algos = [rpt.BottomUp, rpt.Binseg]\n",
-    "models = [\"l2\", \"l1\", \"rbf\"]  # \"l1\", \"rbf\", \"linear\", \"normal\", \"ar\"\n",
-    "kernelCPD_algos = [rpt.KernelCPD]\n",
-    "kernelCPD_kernels = [\"linear\", \"rbf\", \"cosine\"]\n",
-    "\n",
-    "model_objs = [(algo(model=model), model) for (algo, model) in product(algos, models)]\n",
-    "for (algo, kernel) in product(kernelCPD_algos, kernelCPD_kernels):\n",
-    "    model_objs.append((algo(kernel=kernel), kernel))\n",
-    "\n",
-    "n_plots = len(models) * len(algos) + len(kernelCPD_kernels) * len(kernelCPD_algos) + 2\n",
-    "fig, axs = plt.subplots(nrows=n_plots, sharex=True, figsize=(8, 20), dpi=150)\n",
-    "\n",
-    "librosa.display.waveplot(y, sr=sampling_rate, ax=axs[0])\n",
-    "axs[0].set(title=\"nutcracker\")\n",
-    "axs[0].label_outer()\n",
-    "\n",
-    "for idx, (algo, cost) in zip(range(1, n_plots), model_objs):\n",
-    "    algo = algo.fit(chromagram.T)\n",
-    "    rpt_bkps = algo.predict(n_bkps=n_bkps)\n",
+    "bkps_times = librosa.frames_to_time(bkps, sr=sampling_rate, hop_length=hop_length)\n",
+    "for b in bkps_times[:-1]:\n",
+    "    ax.axvline(b, ls=\"--\", color=\"white\", lw=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_util(\n",
+    "    rpt_bkps,\n",
+    "    feature,\n",
+    "    sampling_rate,\n",
+    "    hop_length,\n",
+    "    y_axis,\n",
+    "    vline_min,\n",
+    "    vline_max,\n",
+    "    ax,\n",
+    "    title,\n",
+    "):\n",
     "    # Make the break points \"compatible\" with librosa api\n",
     "    # it expects index 0 and not index of the last point\n",
     "    rpt_bkps.pop(-1)\n",
@@ -181,6 +319,7 @@
     "    )\n",
     "    axs[idx].set(title=f\"Algo : {type(algo).__name__}, Cost : {cost}\")\n",
     "    axs[idx].label_outer()\n",
+    "\n",
     "\n",
     "algo = rpt.BottomUp(model=\"l2\").fit(chromagram.T)\n",
     "rpt_bkps = algo.predict(pen=50)\n",
